--- a/WorkTestApp/MainWindow.xaml
+++ b/WorkTestApp/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <TextBox x:Name="New" HorizontalAlignment="Left" Margin="284,172,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="274" Height="148"/>
 
     </Grid>
 </Window>
