--- a/WorkTestApp/MainWindow.xaml
+++ b/WorkTestApp/MainWindow.xaml
@@ -56,7 +56,25 @@
                 </Grid>
             </TabItem>
             <TabItem Header="ThirdApp">
-                <Grid Background="White"/>
+                <Grid Background="White">
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Text="Задание 3. Реализовать приложение C#, которое предоставит функционал определения входящей строки, является ли она палиндромом." TextWrapping="Wrap" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5,0,5,0"/>
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Введите строку:" TextWrapping="Wrap" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Button Content=" Анализ на палиндром "  Grid.Column="2" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#FF62DCD1" Click="Click_Button_3"/>
+                    <TextBox x:Name = "TextB" Grid.Row = "2" Grid.Column="0" Grid.ColumnSpan="2" TextWrapping = "Wrap"  AcceptsReturn = "True" Margin="10,26,0,28" />
+                    <TextBlock Grid.Row="3" Grid.Column="0"  Text="Результат :" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold"/>
+                    <TextBlock x:Name="Result" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Text="" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" Foreground="#FFEE0000"/>
+                </Grid>
             </TabItem>
         </TabControl>
     </Grid>
